--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                 <p>I'm Boris Mitev</p>
                 <p>I enjoy creating and developing tech websites</p>
             </div>
-            <div><img src="images/avatar.png" /></div>
+            <div><img src="/images/avatar.png" /></div>
 
         </section>
 
         <section class="about" id="about">
-            <div><img src="images/about.jpg" /></div>
+            <div><img src="/images/about.jpg" /></div>
             <div>
                 <p>Ex-marine engineer with 2 years of merchant vessels experience and more
                     then one year on passengers/leisure ships as engineer. Strong education professional with a Master's
