--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <div>
                 <p>Ex-marine engineer with 2 years of merchant vessels experience and more
                     then one year on passengers/leisure ships as engineer. Strong education professional with a Master's
-                    degree in Marine Engineering from Technical University of Varna.
-                    Passionate and motivated, student at SoftUni with a year of corporate experience. Looking for an
+                    degree in Marine Engineering from Technical University of Varna.</p>
+                <p>Passionate and motivated, student at SoftUni with a year of corporate experience. Looking for an
                     opportunity to work in a challenging position
                     combining my skills in Software engineering, which provides development, interesting
                     experiences and personal growth.</p>
