--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@
             </nav>
             <div class="social">
                 <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
-                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a
-                    href="mailto:borko_pm@mail.bg"><i class="fas fa-envelope"></i></a>
+                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a </div>
             </div>
-        </div>
     </header>
     <main>
         <section class="home">
@@ -115,6 +113,7 @@
         </section>
 
         <section class="portfolio" id="portfolio">
+
             <article>
                 <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
                 <h2>More than 100 natural wonders in Bulgaria</h2>
@@ -148,14 +147,22 @@
                 <input type="email" id="email" name="email" placeholder="Your email..">
 
                 <label for="subject">Message</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:10vw"></textarea>
 
                 <input type="submit" value="Send">
             </form>
         </section>
     </main>
     <footer>
-        TEST
+        <div>
+            <p>&copy; 2021 all right reserved</p>
+            <p>
+                <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
+                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a
+                    href="https://www.facebook.com/borko.mitev/"><i class="fab fa-facebook-f"></i></a><a
+                    href="https://www.instagram.com/bo.mitev/"><i class="fab fa-instagram"></i></a>
+            </p>
+        </div>
     </footer>
 </body>
 
