--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
         <section class="contact" id="contact">
-            <h2>Contact me</h2>
+            <h2><i class="fas fa-paper-plane"></i>Contact me</h2>
             <form action="#">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
