--- a/index.html
+++ b/index.html
@@ -83,19 +83,17 @@
             </nav>
             <div class="social">
                 <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
-                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a </div>
+                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a>
             </div>
     </header>
     <main>
         <section class="home">
             <div>
-
                 <p>Hello!</p>
                 <p>I'm Boris Mitev</p>
                 <p>I enjoy creating and developing tech websites</p>
             </div>
             <div><img src="./images/avatar.png" /></div>
-
         </section>
 
         <section class="about" id="about">
@@ -113,7 +111,6 @@
         </section>
 
         <section class="portfolio" id="portfolio">
-
             <article>
                 <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
                 <h2>More than 100 natural wonders in Bulgaria</h2>
@@ -136,7 +133,6 @@
             </article>
         </section>
 
-
         <section class="contact" id="contact">
             <h2><i class="fas fa-paper-plane"></i>Contact me</h2>
             <form action="#">
@@ -153,6 +149,7 @@
             </form>
         </section>
     </main>
+
     <footer>
         <div>
             <p>&copy; 2021 all right reserved</p>
@@ -164,6 +161,7 @@
             </p>
         </div>
     </footer>
+
 </body>
 
 </html>
