--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <footer>
         <div>
-            <p>&copy; 2021 all right reserved</p>
+            <p>&copy; 2021 all rights reserved</p>
             <p>
                 <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
                     href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a
