--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     opportunity to work in a challenging position
                     combining my skills in Software engineering, which provides development, interesting
                     experiences and personal growth.</p>
+                <span>“There is not a ceiling that people can reach in life.”</span>
             </div>
         </section>
 
