--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#news">News</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -111,26 +111,20 @@
             </div>
         </section>
 
-        <section class="portfolio" id="portfolio">
+        <section class="news" id="news">
             <article>
                 <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
                 <h2>More than 100 natural wonders in Bulgaria</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem porro provident dolorum inventore
-                    molestiae iure facilis accusantium laudantium commodi harum? Voluptatem consectetur maiores non,
-                    consequatur expedita eaque molestias adipisci aut!</p>
+                <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project I
+                    ever made. Later on I opened another chapter in my life.<br>Tech stack: <i class="fab fa-php"></i>
+                    <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fas fa-database"></i>
+                </p>
             </article>
             <article>
                 <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
                 <h2>Sixth national web development competition WebLoz'12</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem porro provident dolorum inventore
-                    molestiae iure facilis accusantium laudantium commodi harum? Voluptatem consectetur maiores non,
-                    consequatur expedita eaque molestias adipisci aut!</p>
-            </article>
-            <article>
-                <h2>Article 3</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem porro provident dolorum inventore
-                    molestiae iure facilis accusantium laudantium commodi harum? Voluptatem consectetur maiores non,
-                    consequatur expedita eaque molestias adipisci aut!</p>
+                <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20 on
+                    national competition with 63/100 points. My colleague helped me for typing the data on database.</p>
             </article>
         </section>
 
