--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
                 <p>Ex-marine engineer with 2 years of merchant vessels experience and more
                     then one year on passengers/leisure ships as engineer. Strong education professional with a Master's
                     degree in Marine Engineering from Technical University of Varna.</p>
-                <p>Passionate and motivated, student at SoftUni with a year of corporate experience. Looking for an
+                <p>Passionate and motivated, student at <a href="https://softuni.bg">SoftUni</a> with a year of
+                    corporate
+                    experience in Python
+                    developing. Looking for an
                     opportunity to work in a challenging position
                     combining my skills in Software engineering, which provides development, interesting
                     experiences and personal growth.</p>
@@ -134,7 +137,7 @@
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-                <label for="lname">Email</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Your email..">
 
                 <label for="subject">Message</label>
