--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <main>
         <section class="home">
             <div>
-                <p>Hello!</p>
-                <p>I'm Boris Mitev</p>
-                <p>I enjoy creating and developing tech websites</p>
+                <h1>Hello!</h1>
+                <h3>I'm Boris Mitev</h3>
+                <h2>I enjoy creating and developing tech websites</h2>
             </div>
             <div><img src="./images/avatar.png" /></div>
         </section>
@@ -149,15 +149,13 @@
     </main>
 
     <footer>
-        <div>
-            <p>&copy; 2021 all rights reserved</p>
-            <p>
-                <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
-                    href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a
-                    href="https://www.facebook.com/borko.mitev/"><i class="fab fa-facebook-f"></i></a><a
-                    href="https://www.instagram.com/bo.mitev/"><i class="fab fa-instagram"></i></a>
-            </p>
-        </div>
+        <p>&copy; 2021 all rights reserved</p>
+        <p>
+            <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a
+                href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a
+                href="https://www.facebook.com/borko.mitev/"><i class="fab fa-facebook-f"></i></a><a
+                href="https://www.instagram.com/bo.mitev/"><i class="fab fa-instagram"></i></a>
+        </p>
     </footer>
 
 </body>
