--- a/index.html
+++ b/index.html
@@ -115,24 +115,31 @@
         </section>
 
         <section class="news" id="news">
-            <article>
-                <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
-                <h2>More than 100 natural wonders in Bulgaria</h2>
-                <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project I
-                    ever made. Later on I opened another chapter in my life.<br>Tech stack: <i class="fab fa-php"></i>
-                    <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fas fa-database"></i>
-                </p>
-            </article>
-            <article>
-                <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
-                <h2>Sixth national web development competition WebLoz'12</h2>
-                <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20 on
-                    national competition with 63/100 points. My colleague helped me for typing the data on database.</p>
-            </article>
+            <div><i class="far fa-newspaper"></i><span>News</span></div>
+            <div>
+                <article>
+                    <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
+                    <h2>More than 100 natural wonders in Bulgaria</h2>
+                    <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project
+                        I
+                        ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
+                            class="fab fa-php"></i>
+                        <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fas fa-database"></i>
+                    </p>
+                </article>
+                <article>
+                    <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
+                    <h2>Sixth national web development competition WebLoz'12</h2>
+                    <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20
+                        on
+                        national competition with 63/100 points. My colleague helped me for typing the data on database.
+                    </p>
+                </article>
+            </div>
         </section>
 
         <section class="contact" id="contact">
-            <h2><i class="fas fa-paper-plane"></i>Contact me</h2>
+            <h2><i class="far fa-envelope-open"></i>Contact me</h2>
             <form action="#">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
