--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section class="about" id="about">
             <div><img src="./images/about.jpg" /></div>
             <div>
-                <h2><i class="fas fa-user-circle"></i>a Bit About Me</h2>
+                <h3><i class="fas fa-user-circle"></i>a Bit About Me</h3>
                 <p>Ex-marine engineer with 2 years of merchant vessels experience and more
                     then one year on passengers/leisure ships as engineer. Strong education professional with a Master's
                     degree in Marine Engineering from Technical University of Varna.</p>
@@ -115,11 +115,11 @@
         </section>
 
         <section class="news" id="news">
-            <div><i class="far fa-newspaper"></i><span>News</span></div>
+            <h3><i class="far fa-newspaper"></i>News</h3>
             <div>
                 <article>
                     <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
-                    <h2>More than 100 natural wonders in Bulgaria</h2>
+                    <h3>More than 100 natural wonders in Bulgaria</h3>
                     <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project
                         I
                         ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
@@ -129,7 +129,7 @@
                 </article>
                 <article>
                     <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
-                    <h2>Sixth national web development competition WebLoz'12</h2>
+                    <h3>Sixth national web development competition WebLoz'12</h3>
                     <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20
                         on
                         national competition with 63/100 points. My colleague helped me for typing the data on database.
@@ -139,7 +139,7 @@
         </section>
 
         <section class="contact" id="contact">
-            <h2><i class="far fa-envelope-open"></i>Contact me</h2>
+            <h3><i class="far fa-envelope-open"></i>Contact me</h3>
             <form action="#">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
