--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#news">News</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#news">Accomplishments</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -91,7 +93,7 @@
         <section class="home">
             <div>
                 <h1>Hello!</h1>
-                <h3>I'm Boris Mitev</h3>
+                <h3>I'm Boris <span>Mitev</span></h3>
                 <h2>I enjoy creating and developing tech websites</h2>
             </div>
             <div><img src="./images/avatar.png" /></div>
@@ -100,7 +102,7 @@
         <section class="about" id="about">
             <div><img src="./images/about.jpg" /></div>
             <div>
-                <h3><i class="fas fa-user-circle"></i>a Bit About Me</h3>
+                <h4><i class="fas fa-user-circle"></i>A BIT ABOUT ME</h4>
                 <p>Ex-marine engineer with 2 years of merchant vessels experience and more
                     then one year on passengers/leisure ships as engineer. Strong education professional with a Master's
                     degree in Marine Engineering from Technical University of Varna.</p>
@@ -115,12 +117,178 @@
             </div>
         </section>
 
+        <section class="experience" id="experience">
+            <h4><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
+
+
+            <article>
+                <nav class="dropdown">
+                    <label for="touch5">
+                        <h4>Cold Processing Technologist <span>↕️</span></h4>
+                        <div>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
+                                Present</span></div>
+                    </label>
+                    <input type="checkbox" id="touch5" class="touch">
+                    <ul class="slide">
+                        <li><i class="fas fa-angle-double-right"></i> Develops and implements routing and operational
+                            technologies of
+                            production processes</li>
+                        <li><i class="fas fa-angle-double-right"></i> Sets the operating modes and machine time.</li>
+                        <li><i class="fas fa-angle-double-right"></i> Develops standards for consumption of raw
+                            materials and
+                            equipment.</li>
+                        <li><i class="fas fa-angle-double-right"></i> Works with the ERP system for enterprise
+                            management</li>
+                    </ul>
+                </nav>
+            </article>
+
+            <article>
+                <nav class="dropdown">
+                    <label for="touch4">
+                        <h4>Marine Mechanical Engineer <span>↕️</span></h4>
+                        <div>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
+                                - Feb 2021</span></div>
+                    </label>
+                    <input type="checkbox" id="touch4" class="touch">
+                    <ul class="slide">
+                        <li><i class="fas fa-angle-double-right"></i> Watch keeping engineer for dry dock repair.</li>
+                        <li><i class="fas fa-angle-double-right"></i> Installing new Ballast water treatment system and
+                            scrubber
+                            system for reducing CO2 emissions and cleaning waste water from
+                            vessel.</li>
+                        <li><i class="fas fa-angle-double-right"></i> Testing systems and evaluate the results</li>
+                    </ul>
+                </nav>
+            </article>
+
+            <article>
+                <nav class="dropdown">
+                    <label for="touch3">
+                        <h4>Junior Marine Mechanical Engineer <span>↕️</span></h4>
+                        <div>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2018 -
+                                Aug 2019</span></div>
+                    </label>
+                    <input type="checkbox" id="touch3" class="touch">
+                    <ul class="slide">
+                        <li><i class="fas fa-angle-double-right"></i> In charge with the sounding tanks of the sludge,
+                            fuel oil, diesel oil,
+                            lube oil and dirty oil, checking and keeping the maintenance of the
+                            Main Engines, Auxiliary Engines, Boilers, Centrifugal Separators,
+                            Air Compressors and Pumps</li>
+                        <li><i class="fas fa-angle-double-right"></i> Operating the boilers-Start/Stop, cleaning the
+                            flame burner,
+                            cleaning the filters of the pumps, operating the centrifugal
+                            separators.</li>
+                    </ul>
+                </nav>
+            </article>
+
+            <article>
+                <nav class="dropdown">
+                    <label for="touch2">
+                        <h4>Security Systems and Video surveillance Engineer <span>↕️</span></h4>
+                        <div>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
+                                2018</span></div>
+                    </label>
+                    <input type="checkbox" id="touch2" class="touch">
+                    <ul class="slide">
+                        <li><i class="fas fa-angle-double-right"></i> Networks and systems for communication and data
+                            exchange.</li>
+                        <li><i class="fas fa-angle-double-right"></i> All kinds of technical security systems in the
+                            sites of centralized
+                            guarding – alarm systems, video surveillance, fire alarm and
+                            access control.</li>
+                    </ul>
+                </nav>
+            </article>
+
+            <article>
+                <nav class="dropdown">
+                    <label for="touch1">
+                        <h4>Technical support <span>↕️</span></h4>
+                        <div>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
+                                - Mar 2016</span></div>
+                    </label>
+                    <input type="checkbox" id="touch1" class="touch">
+                    <ul class="slide">
+                        <li><i class="fas fa-angle-double-right"></i> Deliver service and support to end-users using
+                            phone software via
+                            the Internet</li>
+                        <li><i class="fas fa-angle-double-right"></i> Gathering customer’s information and determine the
+                            issue by
+                            evaluating and analysing the symptoms</li>
+                        <li><i class="fas fa-angle-double-right"></i> Diagnose and resolve technical hardware and
+                            software issues
+                            involving internet connectivity</li>
+                        <li><i class="fas fa-angle-double-right"></i> Following standard processes and procedures</li>
+                        <li><i class="fas fa-angle-double-right"></i> Following up and make scheduled call backs to
+                            customers where
+                            necessary</li>
+                        <li><i class="fas fa-angle-double-right"></i> Have to be informed of all new improvements,
+                            changes and
+                            updates</li>
+                    </ul>
+                </nav>
+            </article>
+        </section>
+
+        <section class="education" id="education">
+            <h4><i class="fas fa-user-graduate"></i>EDUCATION</h4>
+            <article>
+                <div>
+                    <h4>SOFTWARE UNIVERSITY ( <a href="https://softuni.bg">SOFTUNI.BG</a> )</h4>
+                    <span>2021 - Present</span>
+                    <ul>
+                        <li>Python Web Development:</li>
+                        <li><i class="fas fa-check"></i> Python OOP - October</li>
+                        <li><i class="fas fa-check"></i> Python Advanced - September</li>
+                        <li><i class="fas fa-check"></i> <a
+                                href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing Fundamentals -
+                                May</a></li>
+                        <li><i class="fas fa-check"></i> <a
+                                href="https://softuni.bg/certificates/details/104890/51b96cb8">Programing Basics with
+                                Python - March</a></li>
+                    </ul>
+                    <ul>
+                        <li>Font-End Development:</li>
+                        <li><i class="fas fa-check"></i> HTML & CSS</li>
+
+                    </ul>
+                    <p>Average grade: 6.00</p>
+                </div>
+                <div>
+                    <h4>TECHNICAL UNIVERSITY OF VARNA</h4>
+                    <span>2013 - 2019</span>
+                    <ul>
+                        <li>Master's degree:</li>
+                        <li><i class="fas fa-check"></i> Marine mechanical engineering</li>
+                    </ul>
+                    <ul>
+                        <li>State Examinations:</li>
+                        <li><i class="fas fa-check"></i> Thesis - 4.50</li>
+                        <li><i class="fas fa-check"></i> State English exam - 5.50</li>
+                    </ul>
+                    <p>Completed 12 out of 12 semesters of study.<br>Average grade: 5.00</p>
+                </div>
+                <div>
+                    <h4>OTHER COURSES:</h4>
+                    <ul>
+                        <li></li>
+                        <li><i class="fas fa-check"></i> The Web developer Bootcamp 2021 - Udemy</li>
+                        <li><i class="fas fa-check"></i> Marlins English Language Test - 90/100%</li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+
         <section class="news" id="news">
-            <h3><i class="far fa-newspaper"></i>News</h3>
+            <h4><i class="far fa-newspaper"></i>Accomplishment</h4>
             <div>
                 <article>
-                    <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
-                    <h3>More than 100 natural wonders in Bulgaria</h3>
+                    <span class="title"><a href="http://borkomitev.atwebpages.com/"><img
+                                src="./images/project1.png" /></a></span>
+                    <h4>PROJECT: More than 100 natural wonders in Bulgaria</h4>
                     <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project
                         I
                         ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
@@ -129,8 +297,9 @@
                     </p>
                 </article>
                 <article>
-                    <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
-                    <h3>Sixth national web development competition WebLoz'12</h3>
+                    <span class="title"><a href="https://www.portal-silistra.eu/news/5581"><img
+                                src="./images/webloz.jpg" /></a></span>
+                    <h4>National Web development competition WebLoz'12</h4>
                     <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20
                         on
                         national competition with 63/100 points. My colleague helped me for typing the data on database.
@@ -140,7 +309,7 @@
         </section>
 
         <section class="contact" id="contact">
-            <h3><i class="far fa-envelope-open"></i>Contact me</h3>
+            <h4><i class="far fa-envelope-open"></i>CONTACT ME</h4>
             <form action="#">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
