--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 Python - March</a></li>
                     </ul>
                     <ul>
-                        <li>Font-End Development:</li>
+                        <li>Front-End Development:</li>
                         <li><i class="fas fa-check"></i> HTML & CSS</li>
 
                     </ul>
@@ -283,7 +283,7 @@
         </section>
 
         <section class="news" id="news">
-            <h4><i class="far fa-newspaper"></i>Accomplishment</h4>
+            <h4><i class="far fa-newspaper"></i>Accomplishments</h4>
             <div>
                 <article>
                     <span class="title"><a href="http://borkomitev.atwebpages.com/"><img
