--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <article>
                 <nav class="dropdown">
                     <label for="touch5">
-                        <h4>Cold Processing Technologist <span>↕️</span></h4>
+                        <h4>Cold Processing Technologist <i class="fas fa-caret-down"></i></h4>
                         <div>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
                                 Present</span></div>
                     </label>
@@ -146,7 +146,7 @@
             <article>
                 <nav class="dropdown">
                     <label for="touch4">
-                        <h4>Marine Mechanical Engineer <span>↕️</span></h4>
+                        <h4>Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
                         <div>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
                                 - Feb 2021</span></div>
                     </label>
@@ -165,7 +165,7 @@
             <article>
                 <nav class="dropdown">
                     <label for="touch3">
-                        <h4>Junior Marine Mechanical Engineer <span>↕️</span></h4>
+                        <h4>Junior Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
                         <div>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2018 -
                                 Aug 2019</span></div>
                     </label>
@@ -187,7 +187,7 @@
             <article>
                 <nav class="dropdown">
                     <label for="touch2">
-                        <h4>Security Systems and Video surveillance Engineer <span>↕️</span></h4>
+                        <h4>Security Systems and Video surveillance Engineer <i class="fas fa-caret-down"></i></h4>
                         <div>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
                                 2018</span></div>
                     </label>
@@ -206,7 +206,7 @@
             <article>
                 <nav class="dropdown">
                     <label for="touch1">
-                        <h4>Technical support <span>↕️</span></h4>
+                        <h4>Technical support <i class="fas fa-caret-down"></i></h4>
                         <div>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
                                 - Mar 2016</span></div>
                     </label>
