--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <nav class="dropdown">
                     <label for="touch5">
                         <h4>Cold Processing Technologist <i class="fas fa-caret-down"></i></h4>
-                        <div>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
-                                Present</span></div>
+                        <p>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
+                                Present</span></p>
                     </label>
                     <input type="checkbox" id="touch5" class="touch">
                     <ul class="slide">
@@ -147,8 +147,8 @@
                 <nav class="dropdown">
                     <label for="touch4">
                         <h4>Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
-                        <div>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
-                                - Feb 2021</span></div>
+                        <p>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
+                                - Feb 2021</span></p>
                     </label>
                     <input type="checkbox" id="touch4" class="touch">
                     <ul class="slide">
@@ -166,8 +166,8 @@
                 <nav class="dropdown">
                     <label for="touch3">
                         <h4>Junior Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
-                        <div>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2018 -
-                                Aug 2019</span></div>
+                        <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2018 -
+                                Aug 2019</span></p>
                     </label>
                     <input type="checkbox" id="touch3" class="touch">
                     <ul class="slide">
@@ -188,8 +188,8 @@
                 <nav class="dropdown">
                     <label for="touch2">
                         <h4>Security Systems and Video surveillance Engineer <i class="fas fa-caret-down"></i></h4>
-                        <div>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
-                                2018</span></div>
+                        <p>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
+                                2018</span></p>
                     </label>
                     <input type="checkbox" id="touch2" class="touch">
                     <ul class="slide">
@@ -207,8 +207,8 @@
                 <nav class="dropdown">
                     <label for="touch1">
                         <h4>Technical support <i class="fas fa-caret-down"></i></h4>
-                        <div>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
-                                - Mar 2016</span></div>
+                        <p>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
+                                - Mar 2016</span></p>
                     </label>
                     <input type="checkbox" id="touch1" class="touch">
                     <ul class="slide">
