--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <nav class="dropdown">
                     <label for="touch3">
                         <h4>Junior Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
-                        <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2018 -
+                        <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2017 -
                                 Aug 2019</span></p>
                     </label>
                     <input type="checkbox" id="touch3" class="touch">
@@ -189,7 +189,7 @@
                     <label for="touch2">
                         <h4>Security Systems and Video surveillance Engineer <i class="fas fa-caret-down"></i></h4>
                         <p>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
-                                2018</span></p>
+                                2017</span></p>
                     </label>
                     <input type="checkbox" id="touch2" class="touch">
                     <ul class="slide">
@@ -241,8 +241,8 @@
                     <span>2021 - Present</span>
                     <ul>
                         <li>Python Web Development:</li>
-                        <li><i class="fas fa-check"></i> Python OOP - October</li>
-                        <li><i class="fas fa-check"></i> Python Advanced - September</li>
+                        <li><i class="fas fa-sync-alt"></i> Python OOP - October</li>
+                        <li><i class="fas fa-sync-alt"></i> Python Advanced - September</li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing Fundamentals -
                                 May</a></li>
@@ -252,7 +252,7 @@
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
-                        <li><i class="fas fa-check"></i> HTML & CSS</li>
+                        <li><i class="fas fa-sync-alt"></i> HTML & CSS</li>
 
                     </ul>
                     <p>Average grade: 6.00</p>
@@ -269,14 +269,22 @@
                         <li><i class="fas fa-check"></i> Thesis - 4.50</li>
                         <li><i class="fas fa-check"></i> State English exam - 5.50</li>
                     </ul>
-                    <p>Completed 12 out of 12 semesters of study.<br>Average grade: 5.00</p>
+                    <p>Average grade: 5.00</p>
                 </div>
                 <div>
+                    <h4><a href="https://udemy.com">UDEMY.COM</a></h4>
+                    <ul>
+                        <li></li>
+                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python - Udemy</li>
+                        <li><i class="fas fa-sync-alt"></i> The Web developer Bootcamp 2021 - Udemy</li>
+
+                    </ul>
                     <h4>OTHER COURSES:</h4>
                     <ul>
                         <li></li>
-                        <li><i class="fas fa-check"></i> The Web developer Bootcamp 2021 - Udemy</li>
+                        <li>
                         <li><i class="fas fa-check"></i> Marlins English Language Test - 90/100%</li>
+                        </li>
                     </ul>
                 </div>
             </article>
