--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 
             <article>
                 <nav class="dropdown">
+                    <input type="checkbox" id="touch5" class="touch">
                     <label for="touch5">
-                        <h4>Cold Processing Technologist <i class="fas fa-caret-down"></i></h4>
+                        <h4>Cold Processing Technologist</h4>
                         <p>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
                                 Present</span></p>
                     </label>
-                    <input type="checkbox" id="touch5" class="touch">
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> Develops and implements routing and operational
                             technologies of
@@ -145,12 +145,12 @@
 
             <article>
                 <nav class="dropdown">
+                    <input type="checkbox" id="touch4" class="touch">
                     <label for="touch4">
-                        <h4>Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
+                        <h4>Marine Mechanical Engineer</h4>
                         <p>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
                                 - Feb 2021</span></p>
                     </label>
-                    <input type="checkbox" id="touch4" class="touch">
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> Watch keeping engineer for dry dock repair.</li>
                         <li><i class="fas fa-angle-double-right"></i> Installing new Ballast water treatment system and
@@ -164,12 +164,12 @@
 
             <article>
                 <nav class="dropdown">
+                    <input type="checkbox" id="touch3" class="touch">
                     <label for="touch3">
-                        <h4>Junior Marine Mechanical Engineer <i class="fas fa-caret-down"></i></h4>
+                        <h4>Junior Marine Mechanical Engineer</h4>
                         <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2017 -
                                 Aug 2019</span></p>
                     </label>
-                    <input type="checkbox" id="touch3" class="touch">
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> In charge with the sounding tanks of the sludge,
                             fuel oil, diesel oil,
@@ -186,12 +186,12 @@
 
             <article>
                 <nav class="dropdown">
+                    <input type="checkbox" id="touch2" class="touch">
                     <label for="touch2">
-                        <h4>Security Systems and Video surveillance Engineer <i class="fas fa-caret-down"></i></h4>
+                        <h4>Security Systems and Video surveillance Engineer</h4>
                         <p>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
                                 2017</span></p>
                     </label>
-                    <input type="checkbox" id="touch2" class="touch">
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> Networks and systems for communication and data
                             exchange.</li>
@@ -205,12 +205,13 @@
 
             <article>
                 <nav class="dropdown">
+                    <input type="checkbox" id="touch1" class="touch">
                     <label for="touch1">
-                        <h4>Technical support <i class="fas fa-caret-down"></i></h4>
+                        <h4>Technical support</h4>
                         <p>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
                                 - Mar 2016</span></p>
                     </label>
-                    <input type="checkbox" id="touch1" class="touch">
+
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> Deliver service and support to end-users using
                             phone software via
@@ -242,7 +243,7 @@
                     <ul>
                         <li>Python Web Development:</li>
                         <li><i class="fas fa-sync-alt"></i> Python OOP - October</li>
-                        <li><i class="fas fa-sync-alt"></i> Python Advanced - September</li>
+                        <li><i class="fas fa-check"></i> Python Advanced - September</li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing Fundamentals -
                                 May</a></li>
