--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <ul>
                         <li>Python Web Development:</li>
                         <li><i class="fas fa-sync-alt"></i> Python OOP - October</li>
-                        <li><i class="fas fa-check"></i> Python Advanced - September</li>
+                        <li><i class="fas fa-check"></i> <a href="https://softuni.bg/certificates/details/114166/20bbc9de">Python Advanced - September</a></li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing Fundamentals -
                                 May</a></li>
