--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                     <h4><a href="https://udemy.com">UDEMY.COM</a></h4>
                     <ul>
                         <li></li>
-                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python - Udemy</li>
-                        <li><i class="fas fa-sync-alt"></i> The Web developer Bootcamp 2021 - Udemy</li>
+                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python</li>
+                        <li><i class="fas fa-sync-alt"></i> The Web developer Bootcamp 2021</li>
 
                     </ul>
                     <h4>OTHER COURSES:</h4>
