--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
-                        <li><i class="fas fa-sync-alt"></i> HTML & CSS</li>
+                        <li><i class="fas fa-sync-alt"></i> <a
+                                href="https://softuni.bg/certificates/details/117637/cc466fcb"> HTML & CSS</a></li>
 
                     </ul>
                     <p>Average grade: 6.00</p>
