--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
-                        <li><i class="fas fa-sync-alt"></i> HTML & CSS</li>
+                        <li><i class="fas fa-check"></i> <a href="https://softuni.bg/certificates/details/117637/cc466fcb">HTML & CSS</a></li>
 
                     </ul>
                     <p>Average grade: 6.00</p>
